Added: Save count

--- a/Simple Counter/index.html
+++ b/Simple Counter/index.html
@@ -2,7 +2,9 @@
 <body>
     <h1>Counter</h1>
     <p id="count-el">0</p>
+    <p id="save-el">Previous entries: </p>
     <button id=increment-btn onclick="increment()">Increment</button>
+    <button id="save-btn" onclick="save()">Save</button>
+    <script src="app.js"></script>
 </body>
-<script src="app.js"></script>
 </html>
